--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,11 @@ body {
     font-family: 'Montserrat', sans-serif;
 }
 
+.apresentacao__conteudo__texto a {
+    text-decoration: none;
+    color: #22D4FD;
+}
+
 .apresentacao__links {
     display: flex;
     flex-direction: column;
